src/test/deca/codegen/invalid/created/ArithmeticExp2.deca
// Description:
//    Division par 0 (par modulo)
// TODO:
// Rajouter la ligne d'erreur
// Resultats:
//    Error: division by 0

{
    int a = 3 % 0;
}